--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShopEase - Your Shopping Destination</title>
-    <link rel="stylesheet" href="/fileing/index.css">
+    <link rel="stylesheet" href="fileing/index.css">
 </head>
 <body>
     <header>
