--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShopEase - Your Shopping Destination</title>
-    <link rel="stylesheet" href="fileing/index.css">
+    <link rel="stylesheet" href="/fileing/index.css">
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Welcome to ShopEase</h1>
+            <h1>Welcome to RADesgin</h1>
             <p>Your one-stop shop for everything!</p>
             <a href="#" class="btn">Shop Now</a>
         </section>
@@ -31,7 +31,7 @@
         </section>
     </main>
     <footer>
-        &copy; 2025 ShopEase. All rights reserved.
+        &copy; 2025 RADesgin. All rights reserved.
     </footer>
 
     <div class="cart-modal" id="cartModal">
