--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><img src="/fileing/studio.png" alt="Logo"></div>
+        <div class="logo"><img src="/fileing/studio.png" alt="Logo" style="width: 50px; height: 50px;"></div>
         <nav>
             <a href="#">Home</a>
             <a href="#">Shop</a>
