--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="#">Home</a>
             <a href="#">Shop</a>
             <a href="#">Deals</a>
-            <a href="#">Contact</a>
+            <a href="/fileing/contact.html">Contact</a>
             <a href="#" class="cart-icon" id="cartBtn">🛒 <span id="cartCount">0</span></a>
         </nav>
     </header>
