--- a/index.html
+++ b/index.html
@@ -47,3 +47,4 @@
     <script src="/fileing/index.js"></script>
 </body>
 </html>
+    <link rel="icon" href="/fileing/studio.png" type="image/x-icon">
