--- a/index.html
+++ b/index.html
@@ -47,5 +47,4 @@
     <script src="/fileing/index.js"></script>
 </body>
 </html>
-    <link rel="icon" href="/fileing/studio.png">
-    <img src="/fileing/studio.png" type="favicon">
+<link rel="icon" type="image/x-icon" href="/fileing/studio.png">
